<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="343dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TimePicker
            android:id="@+id/dia_timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="14dp"
            android:timePickerMode="clock"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhiteBG">

                <EditText
                    android:id="@+id/dialog_remind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/add_notes" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_repeat"
                    android:textSize="15dp"
                    android:ems="10"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_switch"
                    android:checked="true"
                />

            </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/dia_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/save"
                        android:textColor="@color/colorWhiteBG"
                        android:background="#81c784"
                        style="?android:attr/buttonBarStyle"/>
                    <Button
                        android:id="@+id/dia_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Abort"
                        android:textColor="@color/colorWhiteBG"
                        android:background="#ef5350"
                        style="?android:attr/buttonBarStyle"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>


</RelativeLayout>