<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.45"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_weight="1.7"
                >


                <ImageView
                    android:id="@+id/imageviewuser"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginStart="13dp"
                    android:layout_weight="30"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/user_welcome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recent_stats_for_s"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/systolic"
                            android:textSize="27sp" />

                        <TextView
                            android:id="@+id/RecentSys"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingRight="20dp"
                            android:text="@string/blank_load"
                            android:textAlignment="textEnd"
                            android:textSize="27sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="Diastolic"
                            android:textSize="27sp" />

                        <TextView
                            android:id="@+id/RecentDia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingRight="20dp"
                            android:text="@string/blank_load"
                            android:textAlignment="textEnd"
                            android:textSize="27sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight=".75"
                            android:maxLines="1"
                            android:text="@string/pulse_pressure"
                            android:textAlignment="viewStart"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/RecentPP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:paddingRight="20dp"
                            android:text="--"
                            android:textAlignment="textEnd"
                            android:textSize="27sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:paddingLeft="20dp"
                android:text="First Aid"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.73">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:scrollbarStyle="insideOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="5dp"
                        app:cardMaxElevation="40dp"
                        android:clickable="true"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="357dp"
                                android:layout_height="90dp"
                                android:padding="0dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/hbp"
                            />

                            <TextView
                                android:id="@+id/textViewPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/firstaid1"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:clickable="true"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="5dp"
                        app:cardMaxElevation="40dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="357dp"
                                android:layout_height="90dp"
                                android:padding="0dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/lbp" />

                            <TextView
                                android:id="@+id/textViewPrice1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/firstaid2"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="5dp"
                        app:cardMaxElevation="40dp"
                        android:clickable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="357dp"
                                android:layout_height="90dp"
                                android:padding="0dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/heart_attack_fa"/>
                            <!--android:src="@drawable/firstaid" -->

                            <TextView
                                android:id="@+id/textViewPrice3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/firstaid3"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textStyle="bold"
                                />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="5dp"
                        app:cardMaxElevation="40dp"
                        android:clickable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="357dp"
                                android:layout_height="90dp"
                                android:padding="0dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/pulse_fi"/>
                            <!--android:src="@drawable/firstaid" -->

                            <TextView
                                android:id="@+id/textViewPrice4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/info1"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

    </LinearLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>